Namespacing for Cerebro2

--- a/static/index.html
+++ b/static/index.html
@@ -24,8 +24,8 @@
 	<script src="js/util/underscore.extensions.js"></script>
 	<script src="js/util/three.utils.js"></script>
 
+	<script src="js/classes/cerebro2.js"></script>
 	<script src="js/mixins/network.js"></script>
-
 	<script src="js/classes/abstract_region.js"></script>
 	<script src="js/classes/cell_region.js"></script>
 	<script src="js/classes/network_cell_region.js"></script>
