Wrapped main.js code in anonymous function to prevent global namespace pollution.

--- a/static/demos/coordinate/index.html
+++ b/static/demos/coordinate/index.html
@@ -23,6 +23,7 @@
 	<script src="../../js/util/underscore.extensions.js"></script>
 	<script src="../../js/util/three.utils.js"></script>
 
+	<script src="../../js/classes/cerebro2.js"></script>
 	<script src="../../js/mixins/network.js"></script>
 
 	<script src="../../js/classes/abstract_region.js"></script>
